# pathfinder

./: .gitignore  Cargo.toml
c/src/: lib.rs
canvas/src/: lib.rs  text.rs
content/src/: clip.rs  effects.rs  gradient.rs  outline.rs  segment.rs  stroke.rs  util.rs
demo/android/rust/: Cargo.toml
demo/common/src/: camera.rs  lib.rs  renderer.rs  ui.rs  window.rs
examples/canvas_glutin_minimal/: Cargo.toml
examples/canvas_metal_minimal/src/: main.rs
examples/canvas_nanovg/: Cargo.toml  build.rs
examples/canvas_nanovg/src/: demo_nvg.rs  main.rs
examples/canvas_text/src/: main.rs
examples/canvas_webgl_minimal/: Cargo.toml
examples/lottie_basic/src/: main.rs
examples/swf_basic/src/: main.rs
export/src/: pdf.rs
geometry/src/: line_segment.rs  transform3d.rs
gl/src/: lib.rs
gpu/src/: allocator.rs  lib.rs
lottie/src/: lib.rs
metal/src/: lib.rs
renderer/src/: allocator.rs  builder.rs  gpu_data.rs  options.rs  paint.rs  scene.rs  tiler.rs  tiles.rs
renderer/src/concurrent/: executor.rs  scene_proxy.rs
renderer/src/gpu/: blend.rs  debug.rs  renderer.rs
renderer/src/gpu/d3d11/: renderer.rs
renderer/src/gpu/d3d9/: renderer.rs  shaders.rs
resources/: build.rs
resources/src/: embedded.rs
simd/: build.rs
simd/src/: test.rs
simd/src/scalar/: mod.rs
svg/src/: lib.rs
swf/src/: lib.rs  shapes.rs
text/src/: lib.rs
ui/src/: lib.rs
utils/gamma-lut/src/: gamma_lut.rs  main.rs
utils/svg-to-skia/src/: main.rs
web_canvas/: Cargo.toml
webgl/src/: lib.rs
