[workspace]
resolver = "1" # default "2" for edition = "2021"
members = [
    "c",
    "canvas",
    "color",
    "content",
    "demo/common",
    #"demo/android/rust",
    #"demo/magicleap",
    #"demo/native",
    #"examples/canvas_glutin_minimal",
    #"examples/canvas_metal_minimal",
    #"examples/canvas_minimal",
    #"examples/canvas_moire",
    "examples/canvas_nanovg",
    #"examples/canvas_text",
    "examples/canvas_webgl_minimal",
    #"examples/lottie_basic",
    #"examples/swf_basic",
    "geometry",
    "gl",
    "gpu",
    "lottie",
    "export",
    "metal",
    "renderer",
    "resources",
    "simd",
    "svg",
    "swf",
    "text",
    "ui",
    "utils/area-lut",
    "utils/gamma-lut",
    "utils/svg-to-skia",
    "utils/convert",
    "web_canvas",
    "webgl",
]

default-members = [
    "c",
    "canvas",
    "content",
    #"demo/common",
    #"demo/native",
    #"examples/canvas_glutin_minimal",
    #"examples/canvas_minimal",
    #"examples/canvas_moire",
    #"examples/canvas_text",
    #"examples/lottie_basic",
    #"examples/swf_basic",
    "geometry",
    "gl",
    "gpu",
    #"lottie",
    "export",
    "renderer",
    "simd",
    "svg",
    #"swf",
    "text",
    "ui",
    #"utils/area-lut",
    #"utils/gamma-lut",
    #"utils/svg-to-skia",
    #"utils/convert",
]

[patch.crates-io]
pathfinder_geometry = { path = "geometry" }
pathfinder_simd = { path = "simd" }

[patch."https://github.com/servo/pathfinder"]
pathfinder_content = { path = "content" }
pathfinder_color = { path = "color" }
pathfinder_resources = { path = "resources" }
pathfinder_geometry = { path = "geometry" }
pathfinder_renderer = { path = "renderer" }
pathfinder_simd = { path = "simd" }

[profile.dev]
#incremental = false
opt-level = 2   # Enable a small amount of optimization in debug mode

[profile.dev.package."*"]
opt-level = 3   # Enable high optimizations for dependencies, but not for own code.

[profile.release]
codegen-units = 1
strip = 'debuginfo'
panic = 'abort'
#opt-level = 3   # default level
lto = 'fat' # true

