[package]
name = "canvas_nanovg"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2021"

[dependencies]
arrayvec = "0.7"
font-kit = "0.6"
gl = "0.14"

surfman = "0.9"
winit = { version = "0.30", features = [ "rwh_06"] }

#glutin = { version = "0.32", default-features = false }
#glutin-winit = { version = "0.5", default-features = false }
# https://github.com/rust-windowing/glutin/blob/master/glutin_examples/src/lib.rs
#raw-window-handle = "0.6"

log = { version = "0.4", features = [ "release_max_level_info" ] }
image = { version = "0.25", default-features = false, features = [ "png" ] }

pathfinder_canvas = { path = "../../canvas", features = [ "pf-text" ] }
pathfinder_color  = { path = "../../color" }
pathfinder_content  = { path = "../../content" }
pathfinder_geometry = { path = "../../geometry" }
pathfinder_gl  = { path = "../../gl" }
pathfinder_gpu = { path = "../../gpu" }
pathfinder_renderer  = { path = "../../renderer" }
pathfinder_resources = { path = "../../resources" }
pathfinder_simd = { path = "../../simd" }

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.5"    # show better performance in fps
